# beautiful-concurrency-santa-claus-problem

./: CHANGELOG.md  LICENSE  README.md  flake.nix  hie.yaml  stm-santa-claus-mtl.cabal
app/: Main.hs
src/: Basic.hs  Monad.hs
src/SantaClaus/: Actions.hs  Gate.hs  Group.hs  Logger.hs  Monad.hs
